@@ -348,18 +348,18 @@ fprintf(stderr, "*** rpmGlob argv[%d] \"%s\"\n", argc, argv[argc]);
 	}
 	
 	ut = urlPath(av[j], &path);
-	nb = ((ut > URL_IS_DASH) ? (path - av[j]) : 0);
+	nb = ((ut > URL_IS_DASH && ut != URL_IS_FTP) ? (path - av[j]) : 0);
 	maxb += nb;
 	maxb += 1;
 	globURL = globRoot = xmalloc(maxb);
 
 	switch (ut) {
 	case URL_IS_HTTP:
-	case URL_IS_FTP:
 	case URL_IS_PATH:
 	case URL_IS_DASH:
 	    strncpy(globRoot, av[j], nb);
 	    /*@switchbreak@*/ break;
+	case URL_IS_FTP:
 	case URL_IS_UNKNOWN:
 	    /*@switchbreak@*/ break;
 	}
