@@ -515,6 +515,7 @@ fi
 - add --build/--program-prefix, delete libtoolize, from %%configure.
 - find-lang.sh: make sure that mo pattern matches leading '/' (#67368).
 - disambiguate added/installed dependency failures (#50388).
+- rescusitate remote ftp globs (#67678).
 
 * Thu Jun 27 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.33
 - use rpmdb-redhat for suggestions if/when configured (#67430).
