@@ -149,6 +149,7 @@
 	- add --build/--program-prefix, delete libtoolize, from %configure.
 	- find-lang.sh: make sure that mo pattern matches leading '/' (#67368).
 	- disambiguate added/installed dependency failures (#50388).
+	- rescusitate remote ftp globs (#67678).
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
